[package]
name = "whirlpool"
version = "0.2.0"
description = "Created with Anchor"
# qtrade
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# qtrade
anchor-lang = "0.29.0"
# qtrade
anchor-spl = { version = "0.29.0", features = ["metadata"] }
# qtrade: The solana/spl versions match those specified in anchor above 
spl-token = {version = "4", features = ["no-entrypoint"]}
solana-program = "1.16"
thiserror = "1.0"
uint = {version = "0.9.1", default-features = false}
# qtrade
borsh = "0.9.3"
# qtrade
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}


[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]
